--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		    "morgan": "~1.0.0",
 		    "body-parser": "~1.0.0",
 		    "cookie-parser": "~1.0.0",
-	            "express-session": "~1.0.0"
+	        "method-override": "~1.0.0",
+	        "express-session": "~1.0.0"
 	}
 }
