--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		    "cookie-parser": "~1.0.0",
 	        "method-override": "~1.0.0",
 	        "express-session": "~1.0.0"
-	}
+	},
+
 	"scripts": {
-	    "start": "node app.js --websocket-port=$OPENSHIFT_NODEJS_PORT --log-level=1"
-	}
+	  "start": "node server.js"
+	},
+	"main": "server.js"
 }
