--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -13,12 +13,33 @@
     "find.nak": {
         "@searchLimit": 100
     },
+    "general": {
+        "@stripws": false
+    },
     "language": {
+        "@eslintrc": "true",
         "@instanceHighlight": "true",
         "@semi": "true",
         "@undeclaredVars": "true",
         "@unusedFunctionArgs": "false",
-        "@warnLevel": "info"
+        "@warnLevel": "info",
+        "tern_defs": {
+            "json()": {
+                "browser": {
+                    "enabled": true
+                },
+                "ecma5": {
+                    "enabled": true
+                },
+                "jQuery": {
+                    "enabled": true
+                }
+            }
+        }
+    },
+    "python": {
+        "@path": "/usr/local/lib/python2.7/dist-packages:/usr/local/lib/python3.4/dist-packages:/usr/local/lib/python3.5/dist-packages",
+        "@version": "python2"
     },
     "run": {
         "@path": "/.c9/runners",
